--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,16 @@ colombos_ecoli_refannot_20151029.txt filter=lfs diff=lfs merge=lfs -text
 colombos_ecoli_testannot_20151029.txt filter=lfs diff=lfs merge=lfs -text
 network_tf_gene.txt filter=lfs diff=lfs merge=lfs -text
 ecoli_compendium_data.zip filter=lfs diff=lfs merge=lfs -text
+BindingSitePredictionSet.txt filter=lfs diff=lfs merge=lfs -text
+BindingSiteSet.txt filter=lfs diff=lfs merge=lfs -text
+GeneProductSet.txt filter=lfs diff=lfs merge=lfs -text
+OperonSet.txt filter=lfs diff=lfs merge=lfs -text
+TFSet.txt filter=lfs diff=lfs merge=lfs -text
+TF_predicted.txt filter=lfs diff=lfs merge=lfs -text
+colombos.txt filter=lfs diff=lfs merge=lfs -text
+colombos_ecoli_exprdata_20151029.txt filter=lfs diff=lfs merge=lfs -text
+colombos_ecoli_refannot_20151029.txt filter=lfs diff=lfs merge=lfs -text
+colombos_ecoli_testannot_20151029.txt filter=lfs diff=lfs merge=lfs -text
+network_tf_gene.txt filter=lfs diff=lfs merge=lfs -text
+operons.txt filter=lfs diff=lfs merge=lfs -text
+tf_gene.txt filter=lfs diff=lfs merge=lfs -text
